# vscode-languages-support

C/dict/: Makefile.am  README  configure.ac
C/libxml-curl/: Makefile
C/oop/: Makefile.am  README  configure.ac  point.c  point.h  points_use.c  threepoint.c  threepoint.h
C/oop2/: Makefile  README  main.c
C/test1/: Makefile  README.md  main.c  test1.c
C/test1/input/: myfile.txt
Cpp/cmake-project/: CMakeLists.txt  README.md  main.cpp
Cpp/cmake-project/libraries/MathFuncsLib/: CMakeLists.txt
Cpp/cmake-project/libraries/MathFuncsLib/include/: MathFuncsLib.h
Cpp/cmake-project/libraries/MathFuncsLib/src/: MathFuncsLib.cpp
Cpp/cmake-project/libraries/MathFuncsLib/test/: CunitTest.cpp
Cpp/cmake-project/module1/: CMakeLists.txt
Cpp/cmake-project/module1/include/: Module1.h
Cpp/cmake-project/module1/src/: Module1.cpp
Cpp/cmake-project/module1/test/: CunitTest.cpp
Cpp/gradle-project/: README.md
Cpp/test1/: Makefile  main.cpp
